Version 2.8.7
-------------
Remove glad.h dependence on khr.
Prompt for clip name when rendering to new clip. (WIP).




Version 2.8.6 (24 May 2017)
---------------------------
Remove dependency on (deprecated) GLee.
Show audio as volume levels in Clip Editor.
Performance improvements for multitrack playback.
Ensure that timeline track backgrounds are painted in multitrack (regression).
Properly expand text width in the message info window.
Improve zoom in multitrack (zooms around cursor rather than screen center).
Prevent annyoing focus stealing when mt is backed up in the background.
Fix broken audio fade in/out (regression).
Fix external window capture (regression).
Fix crash in palette conversions.
Fix compilation issues with liblives scripting engine.
Fix for keys being in multitrack fullscreen preview.
Code reformatting and tidying (W.I.P)



Version 2.8.5 (27 April 2017)
-----------------------------
Fix audio loss when inserting without audio in clip editor (regression).
Fix compiler error and warnings for gcc 7 (https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=853520)
Fix regression in mkv_decoder.
Fix compiler warnings for openGL plugin.
Change max seek allowed from 1 second to 2 seconds in avformat decoder.
Update css state selectors for gtk 3.18+
Experimental support for Wayland.
Updated translation to Ukranian (thaks Yuri).



Version 2.8.4 (14 Jan 2017)
---------------------------
Fix error in Insert Silence (regression).
Fix minor issue with Undo Insert Silence.
Minor GUI updates for Insert Silence dialog.




Version 2.8.3 (28 December 2016)
--------------------------------
Correct errors in Cancel Insert fix from 2.8.2
Fix some minor issues with alarm timers.
Fix trivial focus issue with Insert dialog in Clip Editor.




Version 2.8.2 (27 November 2016)
--------------------------------
Fix loss of audio when cancelling Insert operation in Clip Editor.
Minor compilation fix for Toonz plugins.
Updated translation to Ukranian (Yuri Chornoivan).





